--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "csc307-jest-unittests",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "sample functions and code for jest unit test demo",
   "main": "sample-functions.js",
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "tdd": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --collectCoverage"
   },
-  "author": "BJ Klingenberg",
+  "author": "Ken Kubiak",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^27.4.5"
-  },
   "devDependencies": {
+    "jest": "^27.4.5",
     "cross-env": "^7.0.3"
   }
 }
