--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "author": "Ken Kubiak",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.4.5",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest": "^27.4.5"
+  },
+  "dependencies": {
+    "prettier": "^3.2.5"
+  },
+  "jest": {
+    "transform": {}
   }
 }
